# cubecode

./: .gitignore  Cargo.toml
apps/llm-cli/: Cargo.toml
apps/llm-cli/src/: main.rs  serve.rs
crates/cubecode-adapter/: Cargo.toml
crates/cubecode-adapter/src/: adapter.rs  drain.rs  error.rs  http_json.rs  lib.rs  mock.rs  terminal.rs
crates/cubecode-contracts/: Cargo.toml
crates/cubecode-contracts/src/: events.rs  ids.rs  lib.rs  routes.rs
crates/cubecode-dispatch/: Cargo.toml
crates/cubecode-dispatch/src/: lib.rs
crates/cubecode-inbox/: Cargo.toml
crates/cubecode-inbox/src/: lib.rs
crates/cubecode-log/: Cargo.toml
crates/cubecode-log/src/: layers.rs  lib.rs  paths.rs  tail.rs
crates/cubecode-orchestrator/: Cargo.toml
crates/cubecode-orchestrator/src/: cancel.rs  flow.rs  lib.rs  outcome.rs  session_meta.rs  state.rs  tool_call.rs
crates/cubecode-sink/: Cargo.toml
crates/cubecode-sink/src/: lib.rs
crates/cubecode-step/: Cargo.toml
crates/cubecode-step/llm-kit/: Cargo.toml
crates/cubecode-step/llm-kit/src/: lib.rs
crates/cubecode-step/llm-kit/src/core/: mod.rs
crates/cubecode-step/llm-kit/src/flow/: mod.rs
crates/cubecode-step/llm-kit/src/pipeline/: mod.rs
crates/cubecode-step/llm-kit/src/providers/: preset.rs
crates/cubecode-step/llm-kit/src/providers/protocols/: anthropic_messages.rs  chat_completions.rs  mod.rs
crates/cubecode-step/llm-kit/src/providers/vendors/: deepseek.rs  minimax.rs  openai.rs
crates/cubecode-step/llm-kit/src/runtime/: env.rs  mod.rs  retry.rs
crates/cubecode-step/llm-kit/src/sanitize/: mod.rs
crates/cubecode-step/llm-kit/tests/unit/: lib.rs
crates/cubecode-step/src/: lib.rs  transcript.rs
crates/cubecode-step/src/memory/: config.rs  error.rs  in_memory.rs  markdown.rs  mod.rs  pipeline.rs  ranking.rs  retriever.rs  sqlite.rs  store.rs  types.rs
crates/cubecode-step/src/tools/: error.rs  mod.rs  read_file.rs
crates/llm-kit/: Cargo.toml
crates/llm-kit/src/: env.rs  error.rs  lib.rs  openai.rs  provider.rs  registry.rs  retry.rs  sanitize.rs
crates/llm-kit/src/core/: provider.rs  types.rs
crates/llm-kit/src/flow/: mod.rs
crates/llm-kit/src/providers/: mod.rs
crates/llm-kit/src/providers/vendors/: anthropic.rs  mod.rs
crates/llm-kit/src/registry/: mod.rs
crates/llm-kit/tests/unit/: lib.rs
crates/llm-node-metadata/: Cargo.toml
crates/llm-node-metadata/src/: lib.rs
crates/llm-node-output-default/: Cargo.toml
crates/llm-node-output-default/src/: lib.rs
crates/llm-node-trace/: Cargo.toml
crates/llm-node-trace/src/: lib.rs
docs/: adapter-embed.md  事件驱动与会话编排.md  逐层实现-TODO.md
