[workspace]
resolver = "2"
members = [
    "crates/llm-kit",
    "crates/llm-node-trace",
    "crates/llm-node-metadata",
    "crates/llm-node-output-default",
    "apps/llm-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.74"

[workspace.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
clap = { version = "4.5", features = ["derive", "std", "help", "usage", "error-context", "env"] }
dotenvy = "0.15"
