[package]
name = "llm-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Command-line interface for llm-kit (list presets, one-shot chat)."

[[bin]]
name = "llm-kit"
path = "src/main.rs"

[dependencies]
clap.workspace = true
cubecode-contracts = { path = "../../crates/cubecode-contracts" }
cubecode-log = { path = "../../crates/cubecode-log" }
cubecode-adapter = { path = "../../crates/cubecode-adapter" }
cubecode-dispatch = { path = "../../crates/cubecode-dispatch" }
cubecode-inbox = { path = "../../crates/cubecode-inbox" }
cubecode-orchestrator = { path = "../../crates/cubecode-orchestrator" }
cubecode-sink = { path = "../../crates/cubecode-sink" }
cubecode-step = { path = "../../crates/cubecode-step" }
dotenvy.workspace = true
llm-kit = { path = "../../crates/cubecode-step/llm-kit" }
tracing.workspace = true
ctrlc = "3.4"
