[package]
name = "cubecode-dispatch"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "③ Dispatcher: event type → handler routing (shell)."

[dependencies]
cubecode-contracts = { path = "../cubecode-contracts" }
tracing.workspace = true
