[package]
name = "cubecode-orchestrator"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "④ Orchestrator/Saga: flow cursor, gating, next intent (shell)."

[dependencies]
cubecode-adapter = { path = "../cubecode-adapter" }
cubecode-contracts = { path = "../cubecode-contracts" }
cubecode-dispatch = { path = "../cubecode-dispatch" }
cubecode-inbox = { path = "../cubecode-inbox" }
cubecode-sink = { path = "../cubecode-sink" }
cubecode-step = { path = "../cubecode-step" }
tracing.workspace = true
