[package]
name = "cubecode-orchestrator"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "④ Orchestrator/Saga: flow cursor, gating, next intent (shell)."

[dependencies]
cubecode-adapter = { path = "../cubecode-adapter" }
cubecode-contracts = { path = "../cubecode-contracts" }
cubecode-dispatch = { path = "../cubecode-dispatch" }
cubecode-inbox = { path = "../cubecode-inbox" }
cubecode-sink = { path = "../cubecode-sink" }
cubecode-step = { path = "../cubecode-step" }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
llm-kit = { path = "../cubecode-step/llm-kit" }
