[package]
name = "llm-kit"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Pluggable LLM core: OpenAI-compatible chat, streaming, retries, and provider registry."

[dependencies]
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
