[package]
name = "llm-kit"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Pluggable LLM core: Chat Completions (OpenAI-compatible), Anthropic Messages, streaming, retries, and provider registry."

[dependencies]
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
